Edits to lodging/ accommodations page
Still WIP

--- a/templates/flight_page/flight_page.html
+++ b/templates/flight_page/flight_page.html
@@ -246,7 +246,7 @@
                             <div class="col-9 mb-5">
                                 <div class="alert alert-danger text-center" role="alert" v-if="error_message.trim()!=''">
                                     {{error_message}}
-                                  </div>
+                                </div>
                             </div>
                         </div>
             
@@ -319,12 +319,12 @@
                             <!-- flight title & departure & arrival country -->
                             <div class="row justify-content-center align-items-center mt-3 mb-5">
                                 <!-- flight ID -->
-                                <div class="col-md-4 text-md-start text-center">
+                                <div class="col-md-3 text-md-start text-center">
                                     <h2 class="ms-md-5">Flight {{e_flightObj.ID}}</h2>
                                 </div>
                 
                                 <!-- 1&2. Departure and Arrival country -->
-                                <div class="col-md-8">
+                                <div class="col-md-9">
                                     <div class="row align-items-center">
                                         <div class="col-5">
                                             <h4 class="my-auto text-end">{{e_flightObj.depart_country}}</h4>
@@ -347,16 +347,16 @@
                             <!-- departure & arrival info + spending -->
                             <div class="row mb-3 justify-content-center">
                                 <!-- flight duration & spending -->
-                                <div class="col-md-3 text-center text-md-start">
+                                <div class="col-md-3 text-center text-md-start mb-4 mb-md-0">
                                     <p><i class="fa-solid fa-hourglass-half fa-lg"></i>
                                     &nbsp;{{e_flightObj.duration_hours}}hr {{e_flightObj.duration_minutes}}min
                 
-                                    <i class="fa-solid fa-money-bill fa-lg ms-3"></i>&nbsp;{{e_flightObj.price}}{{e_flightObj.currency}}</p>
+                                    <i class="fa-solid fa-money-bill fa-lg ms-3"></i>&nbsp;{{e_flightObj.price}} {{e_flightObj.currency}}</p>
                                 </div>
                 
                                 
                                 <!-- 3. Departure time -->
-                                <div class="col-md-4 col-6">
+                                <div class="col-md-4 col-sm-6">
                                     <div class="d-flex justify-content-md-evenly justify-content-center">
                                         <div class="d-inline-block">
                                             <h4 class="fw-bold my-auto">DEP</h4>
@@ -368,13 +368,13 @@
                                 </div>
                 
                                 <!-- 4. Arrival time -->
-                                <div class="col-md-4 col-6">
+                                <div class="col-md-4 col-sm-6 mt-sm-0 mt-4">
                                     <div class="d-flex justify-content-md-evenly justify-content-center">
                                         <div class="d-inline-block">
                                             <h4 class="fw-bold my-auto">ARR</h4>
                                         </div>
                                         <div class="d-inline-block">
-                                            <p class="my-auto  ms-3 ms-lg-0"><span class="fw-semibold">{{convert_datetime_readable(e_flightObj.arrive_datetime)}}</span><br><span class="fst-italic">{{e_flightObj.arrive_tz}}</span></p>
+                                            <p class="my-auto ms-3 ms-lg-0"><span class="fw-semibold">{{convert_datetime_readable(e_flightObj.arrive_datetime)}}</span><br><span class="fst-italic">{{e_flightObj.arrive_tz}}</span></p>
                                         </div>
                                     </div>
                                 </div>
