--- a/templates/lodging/tests/test1.html
+++ b/templates/lodging/tests/test1.html
@@ -26,10 +26,10 @@
 
     <button type="button" class="btn btn-main-bold" @click="log_everything()">Console Log</button>
 
-    <!-- CREATE NEW FLIGHT FORM -->
-    <div class="container-md text-dark bg-mild rounded-4 py-3 mb-3 position-relative" @click="update_local_vmodel()" @keydown="update_local_vmodel()">
+    <!-- CREATE NEW ACCOM FORM -->
+    <div class="container-md text-dark bg-mild rounded-4 py-3 mb-3 position-relative">
         <form action="#">
-            <!-- flight title -->
+            <!-- title -->
             <div class="row justify-content-center text-center">
                 <h2>New Accommodation</h2>
             </div>
@@ -49,8 +49,8 @@
                 <!-- accom local -->
                 <div class="col-sm-6 mt-3 mt-sm-0">
                     <div class="form-floating">
-                        <input type="text" class="form-control" name="accom_name" placeholder=" " v-model="accom_local" id="autocomplete" @click="this.update_local=true">
-                        <label for="accom_local"><i class="fa-solid fa-location-dot"></i> Location</label>
+                        <input type="text" class="form-control" name="accom_name" placeholder=" " v-model="accom_address" id="autocomplete" @click="this.update_local=true">
+                        <label for="accom_address"><i class="fa-solid fa-location-dot"></i> Location</label>
                     </div>
                 </div>
             </div>
@@ -137,104 +137,69 @@
     </div>
 
     <!-- STATIC FLIGHT FORM -->
-    <div class="container-md text-dark bg-mild rounded-4 py-3 mb-3 position-relative">
+    <div class="container-md text-dark bg-mild rounded-4 py-3 mb-3 position-relative" v-for="e_accom_obj of accom_obj_arr">
         <form action="#">
-            <!-- accom title -->
-            <div class="row justify-content-center text-center">
-                <h2>New Accommodation</h2>
-            </div>
-    
-            <!-- accom name & local -->
-            <div class="row justify-content-center my-4">
-    
-                <!-- accom name -->
-                <div class="col-sm-6">
-                    <div class="form-floating">
-                        <input type="text" class="form-control" name="accom_name" placeholder=" " v-model="accom_name">
-                        <label for="accom_name"><i class="fa-solid fa-hotel"></i> Accommodation Name</label>
+            <!-- title & address + check in & out -->
+            <div class="row justify-content-center">
+                <!-- accom name and local -->
+                <div class="col-md-5 text-center text-md-start">
+                    <!-- accom title -->
+                    <div class="row">
+                        <h2>{{e_accom_obj.accom_name}}</h2>
+                    </div>
+                    
+                    <!-- accom name & local -->
+                    <div class="row">
+                        <p><i class="fa-solid fa-location-dot"></i> {{e_accom_obj.accom_address}}</p>
                     </div>
                 </div>
 
-                <!-- accom local -->
-                <div class="col-sm-6 mt-3 mt-sm-0">
-                    <div class="form-floating">
-                        <input type="text" class="form-control" name="accom_name" placeholder=" " v-model="accom_local" id="autocomplete" @change="update_local_vmodel()">
-                        <label for="accom_local"><i class="fa-solid fa-location-dot"></i> Location</label>
-                    </div>
-                </div>
-            </div>
+                <!-- check in & out -->
+                <div class="col-md-6">
+                    <!-- check in -->
+                    <div class="row justify-content-center">
+                        <!-- check in text -->
+                        <div class="col-5 text-end">
+                            <h4 class="fw-bold my-auto">Check In</h4>
+                        </div>
 
-            <!-- Check In & Check Out -->
-            <div class="row justify-content-center mb-5 my-md-5 mt-4">
-                <!-- check in text -->
-                <div class="col-md-2 d-flex justify-content-center align-items-center">
-                    <h4 class="fw-bold">Check In</h4>
-                </div>
-
-                <!-- check in input -->
-                <div class="col-md-4">
-                    <div class="form-floating">
-                        <input type="datetime-local" placeholder=" " v-model.lazy="checkin_datetime" id="checkin_datetime_i9w2">
-                        <label for="checkin_datetime_i9w2"><i class="fa-regular fa-calendar"></i> Check In Date & Time</label>
+                        <!-- check in datetime -->
+                        <div class="col-7">
+                            <p class="my-auto">{{convert_datetime_readable(e_accom_obj.checkin_datetime)}}</p>
+                        </div>
                     </div>
-                </div>
 
-                <!-- check out text -->
-                <div class="col-md-2 d-flex justify-content-center align-items-center mt-3 mt-md-0">
-                    <h4 class="fw-bold">Check Out</h4>
-                </div>
+                    <!-- check out -->
+                    <div class="row justify-content-center mt-3">
+                        <!-- check in text -->
+                        <div class="col-5 text-end">
+                            <h4 class="fw-bold my-auto">Check Out</h4>
+                        </div>
 
-                <!-- check out input -->
-                <div class="col-md-4">
-                    <div class="form-floating">
-                        <input type="datetime-local" placeholder=" " v-model.lazy="checkout_datetime" id="checkout_datetime_i9w2">
-                        <label for="checkout_datetime_i9w2"><i class="fa-regular fa-calendar"></i> Check Out Date & Time</label>
-                    </div>
-                </div>
-            </div>
-    
-            <!-- price & occupancy -->
-            <div class="row my-4">
-                <!-- Cost -->
-                <div class="col-md-4 col-sm-4 col-7">
-                    <div class="form-floating mb-3">
-                        <input type="number" class="form-control" id="currency" placeholder=" " v-model="price">
-                        <label for="currency"><i class="fa-solid fa-dollar-sign"></i> Enter the Cost/person</label>
-                    </div>
-                </div>
-    
-                <!-- Currency -->
-                <div class="col-md-3 col-sm-4 col-5">
-                    <div class="drop-list form-floating">
-                        <div class="from">
-                        <!-- <p>From</p> -->
-                            <div class="select-box">
-                                <select class="form-select" id="floatingSelect" v-model="currency" style="height:57px"> <!-- Options tag are inserted from JavaScript --> </select>
-                            </div>
+                        <!-- check in datetime -->
+                        <div class="col-7">
+                            <p class="my-auto">{{convert_datetime_readable(e_accom_obj.checkout_datetime)}}</p>
                         </div>
                     </div>
                 </div>
+            </div>
 
-                <!-- Max occupancy -->
-                <div class="col-md-5 col-sm-4">
-                    <div class="form-floating">
-                        <input type="number" class="form-control" id="max_occupancy" placeholder=" " v-model="max_occupancy">
-                        <label for="max_occupancy"><i class="fa-solid fa-people-group"></i> Max Occupancy</label>
-                    </div>
+            <div class="row justify-content-center mt-5 mt-md-4">
+                <div class="col-md-11 text-center text-md-start">
+                    <p>
+                        <i class="fa-solid fa-people-group"></i>
+                        &nbsp;{{e_accom_obj.max_occupancy}} pax
+    
+                        <i class="fa-solid fa-money-bill fa-lg ms-3"></i>&nbsp;{{e_accom_obj.price}} {{e_accom_obj.currency}}
+                    </p>
+                </div>
+                <div class="col-md-4">
+
                 </div>
             </div>
 
-            <!-- attachments -->
-            <div class="row mb-4 mt-5 mt-md-4">
-                <div class="col-lg-6 col-md-8">
-                    <!-- attachments -->
-                    <div class="form-floating">
-                        <div class="input-group mb-3">
-                            <label class="input-group-text text-light bg-bold fw-semibold" for="inputGroupFile01">Add Attachment</label>
-                            <input type="file" class="form-control" id="inputGroupFile01">
-                        </div>
-                    </div>
-                </div>
+            <div class="save-btn-div-flight-page justify-content-end">
+                <button type="button" class="btn btn-main-bold-fixed" @click="enable_edit_mode(e_accom_obj.ID)"  :disabled="create_new_accom || edit_existing_accom">Edit</button>
             </div>
         </form>
     </div>
@@ -253,10 +218,8 @@
     <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
 
     <!-- Google Maps -->
-    <script async
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBw6a6E_r_udr7CXLmLZ-6HspypPd9qvMU&libraries=places&callback=initAutocomplete">
-    </script>
-
+    <script src="https://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyBw6a6E_r_udr7CXLmLZ-6HspypPd9qvMU"></script>
+    
     <!-- local js import -->
     <script src="../lodging.js"></script>
 </body>
