--- a/templates/flight_page/flight_page.html
+++ b/templates/flight_page/flight_page.html
@@ -129,7 +129,7 @@
                     <form action="#">
                         <!-- flight title -->
                         <div class="row justify-content-center text-center">
-                            <h2>New Flight</h2>
+                            <h2><i class="fa-solid fa-plane"></i> New Flight</h2>
                         </div>
             
                         <!-- from country to country -->
@@ -427,7 +427,7 @@
                         <form action="#">
                             <!-- flight title -->
                             <div class="row justify-content-center text-center">
-                                <h2>Edit Flight {{e_flightObj.ID}}</h2>
+                                <h2><i class="fa-solid fa-plane"></i> Edit Flight {{e_flightObj.ID}}</h2>
                             </div>
                 
                             <!-- from country to country -->
