--- a/templates/lodging/lodging.html
+++ b/templates/lodging/lodging.html
@@ -131,7 +131,7 @@
                     <form action="#">
                         <!-- title -->
                         <div class="row justify-content-center text-center">
-                            <h2>New Accommodation</h2>
+                            <h2><i class="fa-solid fa-hotel"></i> New Accommodation</h2>
                         </div>
                 
                         <!-- accom name & local -->
@@ -317,7 +317,7 @@
                         <form action="#">
                             <!-- title -->
                             <div class="row justify-content-center text-center">
-                                <h2>{{accom_name}}</h2>
+                                <h2><i class="fa-solid fa-hotel"></i> {{accom_name}}</h2>
                             </div>
                     
                             <!-- accom name & local -->
@@ -331,7 +331,6 @@
                                     </div>
                                 </div>
     
-                                <!-- KENGBOONHELPP -->
                                 <!-- accom local -->
                                 <div class="col-sm-6 mt-3 mt-sm-0">
                                     <div class="form-floating">
@@ -417,7 +416,34 @@
                             <!-- save and cancel buttons -->
                             <div class="save-btn-div-flight-page">
                                 <button type="button" class="btn btn-fade me-3" @click="clear_form(e_accom_obj.ID)">Cancel</button>
-                                <button type="button" class="btn btn-main-fixed" @click="save_new_flight()">Save</button>
+                                <button type="button" class="btn btn-main-fixed" @click="save_edit_existing_accom(e_accom_obj.ID)">Save</button>
+                            </div>
+
+                            <!-- thrash icon (delete button) -->
+                            <div class="delete-btn-div-flight-page">
+                                <button type="button" class="btn btn-fade" data-bs-toggle="modal" data-bs-target="#del_button_modal">
+                                    <i class="fa-solid fa-trash-can fa-lg"></i>
+                                </button>
+                            </div>
+
+
+                            <!-- Delete Button Modal -->
+                            <div class="modal fade" id="del_button_modal" tabindex="-1" aria-labelledby="del_button_modal_label1" aria-hidden="true">
+                                <div class="modal-dialog">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                    <h1 class="modal-title fs-5" id="ModalLabel">Delete Flight</h1>
+                                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                    </div>
+                                    <div class="modal-body">
+                                    Are you sure you want to delete <span class="fw-bold">{{e_accom_obj.accom_name}}</span>?
+                                    </div>
+                                    <div class="modal-footer">
+                                    <button type="button" class="btn btn-main-bold-fixed" data-bs-dismiss="modal">Cancel</button>
+                                    <button type="button" class="btn btn-main-fixed" data-bs-dismiss="modal" @click="delete_accom(e_accom_obj.ID)">Confirm</button>
+                                    </div>
+                                </div>
+                                </div>
                             </div>
                         </form>
                     </div>
