Changed "location" to "address" on lodging pages

--- a/templates/lodging/lodging.html
+++ b/templates/lodging/lodging.html
@@ -150,7 +150,7 @@
                             <div class="col-sm-6 mt-3 mt-sm-0">
                                 <div class="form-floating">
                                     <input type="text" class="form-control" name="accom_name" placeholder=" " v-model="accom_address" id="autocomplete" @click="this.update_local=true">
-                                    <label for="accom_address"><i class="fa-solid fa-location-dot"></i> Location</label>
+                                    <label for="accom_address"><i class="fa-solid fa-location-dot"></i> Address</label>
                                 </div>
                             </div>
                         </div>
@@ -335,7 +335,7 @@
                                 <div class="col-sm-6 mt-3 mt-sm-0">
                                     <div class="form-floating">
                                         <input type="text" class="form-control" name="accom_name" placeholder=" " v-model="accom_address" id="autocomplete" @click="this.update_local=true">
-                                        <label for="accom_address"><i class="fa-solid fa-location-dot"></i> Location</label>
+                                        <label for="accom_address"><i class="fa-solid fa-location-dot"></i> Address</label>
                                     </div>
                                 </div>
                             </div>
