--- a/templates/pages/trips-homepage.html
+++ b/templates/pages/trips-homepage.html
@@ -16,44 +16,9 @@
 </head>
 <body>
 
-    <nav class="navbar navbar-expand-sm navbar-light bg-light border-bottom border-secondary sticky-top">
-        <div class="container">
-            <a class="navbar-brand" href="#"><b>The JAWKS-7</b></a>
-                <button class="navbar-toggler d-lg-none" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavId" aria-controls="collapsibleNavId"
-                    aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-            <div class="collapse navbar-collapse" id="collapsibleNavId">
-
-            <ul class="navbar-nav me-auto mt-2 mt-lg-0">
-                <li class="nav-item">
-                    <button class="d-sm-none nav-link btn btn-main-fixed" style="width: 150px;" href="#">+ Plan New Trip</button>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link active" href="#" aria-current="page">Trips <span class="visually-hidden">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Friends</a>
-                </li>
-                <li class="nav-item">
-                    <a class="d-sm-none nav-link" href="#">Account</a>
-                </li> 
-            </ul>
-
-            <div style="width: calc(8vw + 150px)" class="d-flex justify-content-center">
-                <button type="button" class="d-none d-sm-block btn btn-main mx-3">+ Plan New Trip</button>
-            </div>
-            
-            <!-- <a class="d-none d-sm-block" href="#">
-                <img width="40px" src="https://img.icons8.com/ios-filled/100/000000/user-male-circle.png"/>
-            </a> -->
-
-            <a class="d-none d-sm-block" href="#">
-                <i class="fa-solid fa-circle-user fa-2xl text-dark"></i>
-            </a>
-
-        </div>
-    </nav>
+    <div id="nav">
+        <homepage-navbar></homepage-navbar>
+    </div>
 
     <div class="p-3 row d-flex flex-wrap justify-content-center">
         
@@ -102,5 +67,11 @@
 
     <!-- bootstrap js -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
+
+    <!-- Vue.js Version 3 CDN -->
+    <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+
+    <!-- Refer to my own external JS -->
+    <script src="homepageNavBar.js"></script>
 </body>
 </html>
