--- a/templates/pages/signup_login pages/signup_page.html
+++ b/templates/pages/signup_login pages/signup_page.html
@@ -94,7 +94,7 @@
                 <br>
                 <!-- Submit button -->
                 <div class="d-grid">
-                    <button @click="sign_up()" class="btn btn-primary mb-4">Sign Up</button>
+                    <button type="button" @click="sign_up()" class="btn btn-primary mb-4">Sign Up</button>
                 </div>
 
                 <!-- fb/google buttons can delete if dw-->
