--- a/templates/pages/signup_login pages/signup_page.html
+++ b/templates/pages/signup_login pages/signup_page.html
@@ -12,7 +12,7 @@
     <link href="../../../css/main.min.css" rel="stylesheet">
    
     <!-- external js file -->
-    <script type="module" src="signup_login.js"></script>
+    <script type="module" src="signup_login.js"></script>   
     
     <!-- vue script -->
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
@@ -94,7 +94,7 @@
                 <br>
                 <!-- Submit button -->
                 <div class="d-grid">
-                    <button @click="sign_up()" class="btn btn-primary mb-4">Sign Up</button>
+                    <button type="button" @click="sign_up()" class="btn btn-primary mb-4">Sign Up</button>
                 </div>
 
                 <!-- fb/google buttons can delete if dw-->
